[package]
name = "htf2"
version = "0.1.0"
edition = "2021"

[dependencies]
cli-log = "2.1.0"
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.30.0-alpha.2", features = ["all-widgets", "crossterm"] }
tokio = { version = "1.45.0", features = ["full"] }
tui-input = "0.12.1"
macros= { path = "../macros" }
async-trait = "0.1.88"
indoc = "2.0.6"
indexmap = "2.9.0"
thiserror = "2.0.12"
quick-junit = "0.5.1"
chrono = "0.4.41"

[dev-dependencies]

